--- a/env/prod/k8/linker/linker-deployment.yaml
+++ b/env/prod/k8/linker/linker-deployment.yaml
@@ -31,12 +31,14 @@ spec:
             - containerPort: 8087
             - containerPort: 9087
           env:
-            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
+            - name: MONGO_INITDB_ROOT_USERNAME
               value: wave
-            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
-              value: wave
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              value: music
+            - name: MONGO_INITDB_DATABASE
+              value: admin
             - name: ME_CONFIG_MONGODB_URL
-              value: mongodb://mongo:27017
+              value: mongodb://77.223.123.188:27017
             - name: dbType
               value: mongo
             - name: exporterPort
