WV-80: setting up CORS

--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -68,6 +68,10 @@ server {
   add_header Strict-Transport-Security max-age=15768000;
 
   location / {
+    add_header 'Access-Control-Allow-Origin' 'https://wave-music.online';
+    add_header 'Access-Control-Allow-Methods' 'POST, GET, OPTIONS';
+    add_header 'Access-Control-Allow-Headers' 'Content-type';
+    add_header 'Access-Control-Max-Age' 1728000;
     proxy_set_header                Host wave-music.xyz;
     include  /etc/nginx/mime.types;
     gzip            on;
