--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -88,8 +88,7 @@ jobs:
       - name: generate easyjson
         run: cd bash && chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
       - name: go tests
-        run:
-          chmod +x test.sh && ./test.sh
+        run: cd bash && chmod +x test.sh && ./test.sh
 
   buildWaiter:
     runs-on: ubuntu-latest
