WV-80: added websocket to prometheus

--- a/metrics/prometheus/prometheus.yml
+++ b/metrics/prometheus/prometheus.yml
@@ -53,6 +53,11 @@ scrape_configs:
     static_configs:
       - targets: [ 'linker.default.svc.cluster.local:9086' ]
 
+  - job_name: 'websocket'
+    scrape_interval: 5s
+    static_configs:
+      - targets: [ 'websocket.default.svc.cluster.local:6789' ]
+
 alerting:
   alertmanagers:
     - scheme: http
