--- a/env/prod/k8/api/Dockerfile
+++ b/env/prod/k8/api/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /var/www/service/
 RUN go get github.com/mailru/easyjson
 RUN go install github.com/mailru/easyjson/...@latest
 RUN cd bash && bash generateAll.sh
-RUN bash easyjsonGenerate.sh && cd ..
+RUN cd bash && bash easyjsonGenerate.sh
 RUN go build -o ./tmp/api ./cmd/api/main.go
 
 
