--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -28,9 +28,9 @@ http {
 
   include servers/*;
 
-  upstream websocket {
-    server websocket_server:6789;
-  }
+#   upstream websocket {
+#     server websocket_server:6789;
+#   }
 
 server {
   root /var/www/wave;
@@ -74,13 +74,13 @@ server {
       stub_status on;
   }
 
-  location /api/v1/player-sync {
-      proxy_pass http://websocket;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "Upgrade";
-      proxy_set_header Host $host;
-    }
+#   location /api/v1/player-sync {
+#       proxy_pass http://websocket;
+#       proxy_http_version 1.1;
+#       proxy_set_header Upgrade $http_upgrade;
+#       proxy_set_header Connection "Upgrade";
+#       proxy_set_header Host $host;
+#     }
 
 #   location  /pgadmin {
 #      proxy_pass http://pgadmin/;
