--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -768,6 +768,9 @@ jobs:
           echo "${{ secrets.K8S_CONFIG }}" > k8s.yaml
           export KUBECONFIG="$(pwd)/k8s.yaml"
           kubectl apply -f ./env/prod/k8/ -R
+          
+          sleep 10
+          
           kubectl rollout restart deployment godeploy
           kubectl rollout restart deployment wave
           kubectl rollout restart deployment websocket
@@ -777,7 +780,10 @@ jobs:
           kubectl rollout restart deployment playlist
           kubectl rollout restart deployment track
           kubectl rollout restart deployment album
+          
+          sleep 10
+          
           kubectl rollout restart deployment caddy
           kubectl rollout restart deployment grafana
-          kubectl rollout restart deployment prometheus
           kubectl rollout restart deployment alertmanager
+          kubectl rollout restart deployment prometheus
