WV-80: remove cache for linker

--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -68,6 +68,13 @@ server {
   add_header Strict-Transport-Security max-age=15768000;
 
   location / {
+    # kill cache
+    add_header Last-Modified $date_gmt;
+    add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+    if_modified_since off;
+    expires off;
+    etag off;
+
     add_header 'Access-Control-Allow-Origin' 'https://wave-music.online';
     add_header 'Access-Control-Allow-Methods' 'POST, GET, OPTIONS';
     add_header 'Access-Control-Allow-Headers' 'Content-type';
