--- a/env/dev/Dockerfile
+++ b/env/dev/Dockerfile
@@ -1,4 +1,6 @@
 FROM golang:latest
+WORKDIR ./build
+
 RUN apt-get update -y
 RUN apt-get upgrade -y
 RUN apt install -y protobuf-compiler
@@ -9,4 +11,7 @@ RUN go install github.com/cosmtrek/air@latest
 RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 RUN go install github.com/favadi/protoc-go-inject-tag@latest
+
+COPY go.mod go.sum ./
+RUN go mod download
 
