--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
   #      - web
 
   wave_music:
-    image: mausved/wave_music_api_v1
+    image: mausved/wave_dev
     container_name: api
     tty: true
     restart: always
@@ -43,6 +43,12 @@ services:
       - 5000
     working_dir: /var/www/service
     entrypoint: ./cmd/api/run.sh
+    environment:
+      - AWS_REGION=
+      - AWS_ACCESS_KEY_ID=
+      - AWS_SECRET_ACCESS_KEY=
+      - AWS_BUCKET_NAME=
+      - AWS_S3_URL=
     volumes:
       - ../..:/var/www/service
       - ./airs/api.toml:/var/www/service/cmd/api/.air.toml:ro
@@ -58,7 +64,7 @@ services:
 
   album:
     container_name: album
-    image: mausved/wave_music_api_v1
+    image: mausved/wave_dev
     working_dir: /var/www/service
     restart: always
     environment:
@@ -78,7 +84,7 @@ services:
 
   artist:
     container_name: artist
-    image: mausved/wave_music_api_v1
+    image: mausved/wave_dev
     working_dir: /var/www/service
     restart: always
     environment:
@@ -98,7 +104,7 @@ services:
 
   track:
     container_name: track
-    image: mausved/wave_music_api_v1
+    image: mausved/wave_dev
     working_dir: /var/www/service
     restart: always
     environment:
@@ -118,7 +124,7 @@ services:
 
   playlist:
     container_name: playlist
-    image: mausved/wave_music_api_v1
+    image: mausved/wave_dev
     working_dir: /var/www/service
     restart: always
     environment:
@@ -138,7 +144,7 @@ services:
 
   auth:
     container_name: auth
-    image: mausved/wave_music_api_v1
+    image: mausved/wave_dev
     working_dir: /var/www/service
     restart: always
     environment:
@@ -159,7 +165,7 @@ services:
 
   user:
     container_name: user
-    image: mausved/wave_music_api_v1
+    image: mausved/wave_dev
     working_dir: /var/www/service
     restart: always
     environment:
@@ -178,53 +184,56 @@ services:
       - db
       - redis
 
-  #  linker:
-  #    container_name: linker
-  #    image: mausved/wave_music_api_v1
-  #    working_dir: /var/www/service
-  #    restart: always
-  #    environment:
-  #      - dbType=mongo
-  #      - port=:8087
-  #      - exporterPort=:9087
-  #      - ME_CONFIG_MONGODB_ADMINUSERNAME=wave
-  #      - ME_CONFIG_MONGODB_ADMINPASSWORD=wave
-  #      - ME_CONFIG_MONGODB_URL=mongodb://77.223.123.188:27017
-  #    expose:
-  #      - 8087
-  #      - 9087
-  #    entrypoint: ./cmd/linker/run.sh
-  #    volumes:
-  #      - ./airs/linker.toml:/var/www/service/cmd/linker/.air.toml:ro
-  #      - ../..:/var/www/service
-  #    depends_on:
-  #      - mongo
+#  linker:
+#    container_name: linker
+#    image: mausved/wave_dev
+#    working_dir: /var/www/service
+#    restart: always
+#    environment:
+#      - dbType=mongo
+#      - port=:8087
+#      - exporterPort=:9087
+#      - ME_CONFIG_MONGODB_URL=mongodb://mongo:27017
+#      - MONGO_INITDB_DATABASE=temp
+#      - MONGO_INITDB_ROOT_USERNAME=temp
+#      - MONGO_INITDB_ROOT_PASSWORD=temp
+#    expose:
+#      - 8087
+#      - 9087
+#    entrypoint: ./cmd/linker/run.sh
+#    volumes:
+#      - ./airs/linker.toml:/var/www/service/cmd/linker/.air.toml:ro
+#      - ../..:/var/www/service
+#    depends_on:
+#      - mongo
 
-  #  mongo:
-  #    image: mongo
-  #    container_name: mongo
-  #    restart: always
-  #    #    environment:
-  #    #      - MONGO_INITDB_ROOT_USERNAME=wave
-  #    #      - MONGO_INITDB_ROOT_PASSWORD=wave
-  #    expose:
-  #      - 27017
+#  mongo:
+#    image: mongo
+#    container_name: mongo
+#    restart: always
+#    ports:
+#      - "27017:27017"
+#    expose:
+#      - 27017
+#    volumes:
+#      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
-  #  websocket_server:
-  #    image: mausved/wave_music_api_v1:latest
-  #    container_name: websocket_server
-  #    working_dir: /websocket-server
-  #    environment:
-  #      - REDIS_ADDR=redis:6379
-  #      - AUTH_GRPC_ADDR=auth:8085
-  #    expose:
-  #      - 6789
-  #    entrypoint: ./websocket-server/cmd/run.sh
-  #    volumes:
-  #      - ../..:/websocket-server
-  #    depends_on:
-  #      - redis
-  #      - auth
+
+  websocket_server:
+    image: mausved/wave_dev
+    container_name: websocket_server
+    working_dir: /websocket-server
+    environment:
+      - REDIS_ADDR=redis:6379
+      - AUTH_GRPC_ADDR=auth:8085
+    expose:
+      - 6789
+    entrypoint: ./websocket-server/cmd/run.sh
+    volumes:
+      - ../..:/websocket-server
+    depends_on:
+      - redis
+      - auth
 
   redis:
     image: redis
@@ -245,144 +254,3 @@ services:
       - "5432:5432"
     expose:
       - 5432
-    #    volumes:
-    #      - data:/var/lib/postgresql/data
-
-#  redis-exporter:
-#    image: oliver006/redis_exporter:alpine
-#    container_name: redis-exporter
-#    restart: unless-stopped
-#    command: [ "--redis.addr", "redis://redis:6379" ]
-#    environment:
-#      - ADMIN_USER=${ADMIN_USER}
-#      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-#    expose:
-#      - 9121
-#    depends_on:
-#      - redis
-#
-#  postgres-exporter:
-#    image: wrouesnel/postgres_exporter
-#    container_name: postgres-exporter
-#    environment:
-#      - DATA_SOURCE_NAME=postgresql://postgres:music@db:5432/wave?sslmode=disable
-#      - USER
-#      - ADMIN_USER=${ADMIN_USER}
-#      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-#    expose:
-#      - 9187
-#    depends_on:
-#      - db
-
-#  prometheus:
-#    image: prom/prometheus
-#    container_name: prometheus
-#    volumes:
-#      - ../../metrics/prometheus:/etc/prometheus
-#      - prometheus_data:/prometheus
-#    command:
-#      - '--config.file=/etc/prometheus/prometheus.yml'
-#      - '--storage.tsdb.path=/prometheus'
-#      - '--web.console.libraries=/etc/prometheus/console_libraries'
-#      - '--web.console.templates=/etc/prometheus/consoles'
-#      - '--storage.tsdb.retention.time=200h'
-#      - '--web.enable-lifecycle'
-#      - '--web.external-url=/monitoring/prometheus/'
-#      - '--web.route-prefix=/monitoring/prometheus/'
-#    restart: unless-stopped
-#    depends_on:
-#      - pushgateway
-#      - nodeexporter
-#      - redis-exporter
-#      - nginx-exporter
-#      - postgres-exporter
-#      - alertmanager
-#      - cadvisor
-#      - wave_music
-#    expose:
-#      - 9090
-
-#  alertmanager:
-#    image: prom/alertmanager
-#    container_name: alertmanager
-#    volumes:
-#      - ../../metrics/alertmanager:/etc/alertmanager
-#    command:
-#      - '--config.file=/etc/alertmanager/config.yml'
-#      - '--storage.path=/alertmanager'
-#    restart: unless-stopped
-#    expose:
-#      - 9093
-
-#  nodeexporter:
-#    image: prom/node-exporter
-#    container_name: nodeexporter
-#    volumes:
-#      - /proc:/host/proc:ro
-#      - /sys:/host/sys:ro
-#      - /:/rootfs:ro
-#    command:
-#      - '--path.procfs=/host/proc'
-#      - '--path.rootfs=/rootfs'
-#      - '--path.sysfs=/host/sys'
-#      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
-#    restart: unless-stopped
-#    expose:
-#      - 9100
-
-#  cadvisor:
-#    image: gcr.io/cadvisor/cadvisor
-#    container_name: cadvisor
-#    volumes:
-#      - /:/rootfs:ro
-#      - /var/run:/var/run:rw
-#      - /sys:/sys:ro
-#      - /var/lib/docker:/var/lib/docker:ro
-#      #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
-#    restart: unless-stopped
-#    expose:
-#      - 8080
-
-#  grafana:
-#    image: grafana/grafana
-#    container_name: grafana
-#    volumes:
-#      - grafana_data:/var/lib/grafana
-#      - ../../metrics/grafana/grafana.ini:/etc/grafana/grafana.ini
-#      - ../../metrics/grafana/provisioning:/etc/grafana/provisioning
-#    environment:
-#      - GF_SECURITY_ADMIN_USER=${ADMIN_USER}
-#      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD}
-#      - GF_USERS_ALLOW_SIGN_UP=false
-#      - ADMIN_USER=${ADMIN_USER}
-#      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-#    restart: unless-stopped
-#    expose:
-#      - 3000
-#
-#  pushgateway:
-#    image: prom/pushgateway
-#    container_name: pushgateway
-#    restart: unless-stopped
-#    expose:
-#      - 9091
-
-#  caddy:
-#    image: caddy
-#    container_name: caddy
-#    expose:
-#      - "3000"
-#      - "9090"
-#      - "9113"
-#    ports:
-#      - "9093:9093"
-#      - "9091:9091"
-#      - "9121:9121"
-#    volumes:
-#      - ../../metrics/caddy:/etc/caddy
-#    environment:
-#      - ADMIN_USER=${ADMIN_USER}
-#      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-#    restart: unless-stopped
-#    depends_on:
-#      - prometheus
