WV-81: try fix nginx

--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -9,7 +9,7 @@ http {
     default upgrade;
     '' close;
   }
-#   proxy_cache_path /var/lib/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:15m max_size=1G;
+
   sendfile on;
   tcp_nopush on;
   types_hash_max_size 2048;
@@ -30,21 +30,16 @@ http {
   }
 
 server {
-  root /var/www/wave;
-  listen 80 http2;
-
+  listen 80;
   server_name wave-music.online www.wave-music.online;
   return 301 https://wave-music.online$request_uri;
 
 }
 
 server {
-  root /var/www/wave;
-  listen 80 http2;
-
+  listen 80;
   server_name wave-music.xyz www.wave-music.xyz;
   return 301 https://wave-music.xyz$request_uri;
-
 }
 
 # wave-music.xyz
@@ -93,7 +88,7 @@ server {
 # wave-music.online
 server {
   root /var/www/wave;
-  listen 443 ssl default_server http2;
+  listen 443 ssl http2;
   server_name wave-music.online www.wave-music.online;
   ssl_session_cache   shared:SSL:2m;
   ssl_session_timeout 6h;
@@ -112,7 +107,6 @@ server {
 
 
   location / {
-#     proxy_cache proxy_cache;
     expires 7d;
     access_log off;
     include  /etc/nginx/mime.types;
