--- a/env/prod/k8/web/web-service.yaml
+++ b/env/prod/k8/web/web-service.yaml
@@ -12,11 +12,11 @@ spec:
   ports:
     - name: "http"
       port: 80
-      targetPort: 80
+      targetPort: http
       protocol: "TCP"
     - name: "https"
       port: 443
-      targetPort: 443
+      targetPort: https
       protocol: "TCP"
   selector:
     io.kompose.service: nginx
