WV-81: fixed proxy web-socket

--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -123,6 +123,9 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
+
+        proxy_read_timeout 1000s;
+        proxy_send_timeout 1000s;
   }
 
   location /api {
