WV-81: remove extra code and files

--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -94,7 +94,7 @@ server {
   ssl_session_timeout 6h;
   ssl_certificate      /var/www/certs/fullchain.pem;
   ssl_certificate_key  /var/www/certs/privkey.pem;
-  keepalive_timeout 150;
+  keepalive_timeout 1000s;
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-Content-Type-Options "nosniff";
   add_header X-XSS-Protection "1; mode=block";
