WV-80: fixed popular and nginx + loadbalancer

--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -27,6 +27,7 @@ http {
 
   upstream websocket {
     server websocket.default.svc.cluster.local:6789;
+    keepalive 1000;
   }
 
 server {
@@ -99,6 +100,8 @@ server {
   add_header X-Content-Type-Options "nosniff";
   add_header X-XSS-Protection "1; mode=block";
   underscores_in_headers on;
+  proxy_read_timeout 1000s;
+  proxy_send_timeout 1000s;
 
   ssl_prefer_server_ciphers On;
   ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
