--- a/env/prod/k8/web/loadbalancer.yaml
+++ b/env/prod/k8/web/loadbalancer.yaml
@@ -2,6 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: godeploy
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    kubectl.kubernetes.io/proxy-read-timeout: "1000s"
+    kubectl.kubernetes.io/proxy-connect-timeout: "1000s"
+    nginx.org/proxy-read-timeout: "1000s"
+    nginx.org/proxy-connect-timeout: "1000s"
+    nginx.org/websocket-services: "1"
 spec:
   type: LoadBalancer
   selector:
